k8s/webservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webservice
  namespace: pingpong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webservice
  template:
    metadata:
      labels:
        app: webservice
    spec:
      containers:
      - name: webservice
        image: pingpongacr333.azurecr.io/webservice:latest
        ports:
        - containerPort: 8080
