k8s/pongservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pongservice
  namespace: pingpong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pongservice
  template:
    metadata:
      labels:
        app: pongservice
    spec:
      containers:
      - name: pongservice
        image: <ACR_NAME>.azurecr.io/pongservice:latest
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: pongservice
  namespace: pingpong
spec:
  selector:
    app: pongservice
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
